--- a/public/css/board.css
+++ b/public/css/board.css
@@ -468,3 +468,11 @@ th button {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+
+#personInCharge {
+  border: 0;
+  border-radius: 5px;
+  outline: 0;
+  width: 100%;
+  background: none;
+}
