--- a/views/index.html
+++ b/views/index.html
@@ -59,27 +59,22 @@
     </div>
   </div>
   </div>
-</body>
-<body2>
-
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a onclick="document.getElementById('id01').style.display='block'"><button2 style="width:auto;">Sign up</button2></a>
-  <a onclick="document.getElementById('id02').style.display='block'"><button2 style="width:auto;">Sign in</button2></a>
-  <a onclick="document.getElementById('id03').style.display='block'"><button2 style="width:auto;">Magic</button2></a>
-  <a id="installBtn" onclick="installApp()"><button2 style="width:auto;">Install App</button2></a>
+  <a onclick="document.getElementById('id01').style.display='block'"><span style="width:auto;">Sign up</span></a>
+  <a onclick="document.getElementById('id02').style.display='block'"><span style="width:auto;">Sign in</span></a>
+  <a id="installBtn" onclick="installApp()"><span style="width:auto;">Install App</span></a>
   <br>
   <a href="magic.html">Infomation</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
 </div>  
-</body2>
   <div id="id01" class="modal">
   
-  <div class="modal-content animate" action="test.html">
+  <div class="modal-content animate">
 
 <div class="container">
- <body>
+ <div>
     First name:
     <input id="firstname" class="fname" type="text">
     Username:
@@ -91,7 +86,7 @@
     <button id="button" onclick="signUp()">
     Sign up
     </button>
-  </body>
+  </div>
 </div>
     
 
@@ -103,10 +98,9 @@
   
   <div id="id02" class="modal">
   
-  <div class="modal-content animate" action="test.html">
+  <div class="modal-content animate">
 
 <div class="container">
- <body>
     <label for="usernameLogin"><b>Username</b></label>
     <input id="usernameLogin" type="text" autocomplete="username">
     <label for="passwordLogin"><b>Password</b></label>
@@ -114,7 +108,6 @@
     <button id="signIn" onclick="signIn()">
     Sign in
     </button>
-  </body>
 </div>
     
 
@@ -126,7 +119,7 @@
   
    <div id="id03" class="modal">
   
-  <div class="modal-content animate" action="test.html">
+  <div class="modal-content animate">
 
 <div class="container">
 <p>
@@ -141,6 +134,6 @@
   </div>
   </div>
   
-  
+  </body>
   
 </html>
